tests/errors/try-non-carrier/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0123]: `try` only works on `option`, `result`, or `task`; this right-hand side has type `int`.
  │
2 │  try x = 5
  │  ^^^^^^^^^
  ╰─𜱶 tests/errors/try-non-carrier/main.pa:2:2
